--- a/research-paper-search.ipynb
+++ b/research-paper-search.ipynb
@@ -147,7 +147,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import json"
       ]
     },
     {
