Test basic search

--- a/research-paper-search.ipynb
+++ b/research-paper-search.ipynb
@@ -231,11 +231,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "key_word = 'RAG'\n",
+        "key_word = 'search engine'\n",
         "\n",
         "results = df[df['title'].str.contains(key_word, case=False)].head(5)\n",
         "\n",
-        "print(results)"
+        "print(results['title'])"
       ]
     }
   ],
