Add the abstract column and drop doi from template ipynb

--- a/research-paper-search.ipynb
+++ b/research-paper-search.ipynb
@@ -2,12 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "## Dataset Partitioning Script"
-      ],
       "metadata": {
         "id": "ksa-UW5694MY"
-      }
+      },
+      "source": [
+        "## Dataset Partitioning Script"
+      ]
     },
     {
       "cell_type": "code",
@@ -21,8 +21,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using Colab cache for faster access to the 'arxiv' dataset.\n",
             "Path to dataset files: /kaggle/input/arxiv\n"
@@ -50,8 +50,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'id': '0704.0001', 'submitter': 'Pavel Nadolsky', 'authors': \"C. Bal\\\\'azs, E. L. Berger, P. M. Nadolsky, C.-P. Yuan\", 'title': 'Calculation of prompt diphoton production cross sections at Tevatron and\\n  LHC energies', 'comments': '37 pages, 15 figures; published version', 'journal-ref': 'Phys.Rev.D76:013009,2007', 'doi': '10.1103/PhysRevD.76.013009', 'report-no': 'ANL-HEP-PR-07-12', 'categories': 'hep-ph', 'license': None, 'abstract': '  A fully differential calculation in perturbative quantum chromodynamics is\\npresented for the production of massive photon pairs at hadron colliders. All\\nnext-to-leading order perturbative contributions from quark-antiquark,\\ngluon-(anti)quark, and gluon-gluon subprocesses are included, as well as\\nall-orders resummation of initial-state gluon radiation valid at\\nnext-to-next-to-leading logarithmic accuracy. The region of phase space is\\nspecified in which the calculation is most reliable. Good agreement is\\ndemonstrated with data from the Fermilab Tevatron, and predictions are made for\\nmore detailed tests with CDF and DO data. Predictions are shown for\\ndistributions of diphoton pairs produced at the energy of the Large Hadron\\nCollider (LHC). Distributions of the diphoton pairs from the decay of a Higgs\\nboson are contrasted with those produced from QCD processes at the LHC, showing\\nthat enhanced sensitivity to the signal can be obtained with judicious\\nselection of events.\\n', 'versions': [{'version': 'v1', 'created': 'Mon, 2 Apr 2007 19:18:42 GMT'}, {'version': 'v2', 'created': 'Tue, 24 Jul 2007 20:10:27 GMT'}], 'update_date': '2008-11-26', 'authors_parsed': [['Balázs', 'C.', ''], ['Berger', 'E. L.', ''], ['Nadolsky', 'P. M.', ''], ['Yuan', 'C. -P.', '']]}\n",
             "{'id': '0704.0002', 'submitter': 'Louis Theran', 'authors': 'Ileana Streinu and Louis Theran', 'title': 'Sparsity-certifying Graph Decompositions', 'comments': 'To appear in Graphs and Combinatorics', 'journal-ref': None, 'doi': None, 'report-no': None, 'categories': 'math.CO cs.CG', 'license': 'http://arxiv.org/licenses/nonexclusive-distrib/1.0/', 'abstract': '  We describe a new algorithm, the $(k,\\\\ell)$-pebble game with colors, and use\\nit obtain a characterization of the family of $(k,\\\\ell)$-sparse graphs and\\nalgorithmic solutions to a family of problems concerning tree decompositions of\\ngraphs. Special instances of sparse graphs appear in rigidity theory and have\\nreceived increased attention in recent years. In particular, our colored\\npebbles generalize and strengthen the previous results of Lee and Streinu and\\ngive a new proof of the Tutte-Nash-Williams characterization of arboricity. We\\nalso present a new decomposition that certifies sparsity based on the\\n$(k,\\\\ell)$-pebble game with colors. Our work also exposes connections between\\npebble game algorithms and previous sparse graph algorithms by Gabow, Gabow and\\nWestermann and Hendrickson.\\n', 'versions': [{'version': 'v1', 'created': 'Sat, 31 Mar 2007 02:26:18 GMT'}, {'version': 'v2', 'created': 'Sat, 13 Dec 2008 17:26:00 GMT'}], 'update_date': '2008-12-13', 'authors_parsed': [['Streinu', 'Ileana', ''], ['Theran', 'Louis', '']]}\n",
@@ -82,8 +82,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "finished\n"
           ]
@@ -125,8 +125,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'id': '0704.0047', 'submitter': 'Igor Grabec', 'authors': 'T. Kosel and I. Grabec', 'title': 'Intelligent location of simultaneously active acoustic emission sources:\\n  Part I', 'comments': '5 pages, 5 eps figures, uses IEEEtran.cls', 'journal-ref': None, 'doi': None, 'report-no': None, 'categories': 'cs.NE cs.AI', 'license': None, 'abstract': '  The intelligent acoustic emission locator is described in Part I, while Part\\nII discusses blind source separation, time delay estimation and location of two\\nsimultaneously active continuous acoustic emission sources.\\n  The location of acoustic emission on complicated aircraft frame structures is\\na difficult problem of non-destructive testing. This article describes an\\nintelligent acoustic emission source locator. The intelligent locator comprises\\na sensor antenna and a general regression neural network, which solves the\\nlocation problem based on learning from examples. Locator performance was\\ntested on different test specimens. Tests have shown that the accuracy of\\nlocation depends on sound velocity and attenuation in the specimen, the\\ndimensions of the tested area, and the properties of stored data. The location\\naccuracy achieved by the intelligent locator is comparable to that obtained by\\nthe conventional triangulation method, while the applicability of the\\nintelligent locator is more general since analysis of sonic ray paths is\\navoided. This is a promising method for non-destructive testing of aircraft\\nframe structures by the acoustic emission method.\\n', 'versions': [{'version': 'v1', 'created': 'Sun, 1 Apr 2007 13:06:50 GMT'}], 'update_date': '2009-09-29', 'authors_parsed': [['Kosel', 'T.', ''], ['Grabec', 'I.', '']]}\n",
             "{'id': '0704.0050', 'submitter': 'Igor Grabec', 'authors': 'T. Kosel and I. Grabec', 'title': 'Intelligent location of simultaneously active acoustic emission sources:\\n  Part II', 'comments': '5 pages, 7 eps figures, uses IEEEtran.cls', 'journal-ref': None, 'doi': None, 'report-no': None, 'categories': 'cs.NE cs.AI', 'license': None, 'abstract': '  Part I describes an intelligent acoustic emission locator, while Part II\\ndiscusses blind source separation, time delay estimation and location of two\\ncontinuous acoustic emission sources.\\n  Acoustic emission (AE) analysis is used for characterization and location of\\ndeveloping defects in materials. AE sources often generate a mixture of various\\nstatistically independent signals. A difficult problem of AE analysis is\\nseparation and characterization of signal components when the signals from\\nvarious sources and the mode of mixing are unknown. Recently, blind source\\nseparation (BSS) by independent component analysis (ICA) has been used to solve\\nthese problems. The purpose of this paper is to demonstrate the applicability\\nof ICA to locate two independent simultaneously active acoustic emission\\nsources on an aluminum band specimen. The method is promising for\\nnon-destructive testing of aircraft frame structures by acoustic emission\\nanalysis.\\n', 'versions': [{'version': 'v1', 'created': 'Sun, 1 Apr 2007 18:53:13 GMT'}], 'update_date': '2007-05-23', 'authors_parsed': [['Kosel', 'T.', ''], ['Grabec', 'I.', '']]}\n",
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -201,30 +201,11 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "          id                  authors  \\\n",
-              "0  0704.0047   T. Kosel and I. Grabec   \n",
-              "1  0704.0050   T. Kosel and I. Grabec   \n",
-              "2  0704.0304        Carlos Gershenson   \n",
-              "3  0704.0985  Mohd Abubakr, R.M.Vinay   \n",
-              "4  0704.1028            Jianlin Cheng   \n",
-              "\n",
-              "                                               title update_date  \\\n",
-              "0  Intelligent location of simultaneously active ...  2009-09-29   \n",
-              "1  Intelligent location of simultaneously active ...  2007-05-23   \n",
-              "2                  The World as Evolving Information  2013-04-05   \n",
-              "3  Architecture for Pseudo Acausal Evolvable Embe...  2007-05-23   \n",
-              "4    A neural network approach to ordinal regression  2007-05-23   \n",
-              "\n",
-              "                     categories                           doi  \n",
-              "0                   cs.NE cs.AI                          None  \n",
-              "1                   cs.NE cs.AI                          None  \n",
-              "2  cs.IT cs.AI math.IT q-bio.PE  10.1007/978-3-642-18003-3_10  \n",
-              "3                   cs.NE cs.AI                          None  \n",
-              "4             cs.LG cs.AI cs.NE                          None  "
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-439e73ba-9e46-46bd-9164-e75854799a9e\" class=\"colab-df-container\">\n",
@@ -513,19 +494,38 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "df"
-            }
+            "text/plain": [
+              "          id                  authors  \\\n",
+              "0  0704.0047   T. Kosel and I. Grabec   \n",
+              "1  0704.0050   T. Kosel and I. Grabec   \n",
+              "2  0704.0304        Carlos Gershenson   \n",
+              "3  0704.0985  Mohd Abubakr, R.M.Vinay   \n",
+              "4  0704.1028            Jianlin Cheng   \n",
+              "\n",
+              "                                               title update_date  \\\n",
+              "0  Intelligent location of simultaneously active ...  2009-09-29   \n",
+              "1  Intelligent location of simultaneously active ...  2007-05-23   \n",
+              "2                  The World as Evolving Information  2013-04-05   \n",
+              "3  Architecture for Pseudo Acausal Evolvable Embe...  2007-05-23   \n",
+              "4    A neural network approach to ordinal regression  2007-05-23   \n",
+              "\n",
+              "                     categories                           doi  \n",
+              "0                   cs.NE cs.AI                          None  \n",
+              "1                   cs.NE cs.AI                          None  \n",
+              "2  cs.IT cs.AI math.IT q-bio.PE  10.1007/978-3-642-18003-3_10  \n",
+              "3                   cs.NE cs.AI                          None  \n",
+              "4             cs.LG cs.AI cs.NE                          None  "
+            ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "data = get_data()\n",
         "\n",
-        "cols = ['id', 'authors', 'title', 'update_date', 'categories', 'doi']\n",
+        "cols = ['id', 'authors', 'title', 'update_date', 'categories', 'abstract', 'doi']\n",
         "\n",
         "interested_data = []\n",
         "for line in data:\n",
@@ -557,8 +557,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Percent Rows with Links = 0.11%\n"
           ]
@@ -569,6 +569,26 @@
         "rows_with_links = df['doi'].notna().sum()\n",
         "\n",
         "print(f\"Percent Rows with Links = {rows_with_links / total_rows:.2f}%\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Drop the doi since most papers have NA\n",
+        "df = df.drop('doi', axis=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Number of research papers\n",
+        "df.shape"
       ]
     },
     {
@@ -602,8 +622,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1326    Intelligent Semantic Web Search Engines: A Bri...\n",
             "6297               Towards the Ontology Web Search Engine\n",
